{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 30,
  "lineage": "2ec694ba-dcdd-e5b9-80e4-48afbfcef6b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:internet-gateway/igw-07ec1df01c045c12b",
            "id": "igw-07ec1df01c045c12b",
            "owner_id": "115717770171",
            "tags": {
              "Name": "ecs-igtw"
            },
            "tags_all": {
              "Name": "ecs-igtw"
            },
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/app-lb/92c07513c9c6bc4d",
            "arn_suffix": "app/app-lb/92c07513c9c6bc4d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1588039321.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/app-lb/92c07513c9c6bc4d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e99a5768d7c5361"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013c3f9fbf929b191"
              },
              {
                "subnet_id": "subnet-08d997eea2486d7af"
              }
            ],
            "subnets": [
              "subnet-013c3f9fbf929b191",
              "subnet-08d997eea2486d7af"
            ],
            "vpc_id": "vpc-07ab0c5334a394987",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:listener/app/app-lb/92c07513c9c6bc4d/26765fd25a333b0e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/tg-group/f7aa49eb4964f33c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:listener/app/app-lb/92c07513c9c6bc4d/26765fd25a333b0e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/app-lb/92c07513c9c6bc4d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.tg-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/tg-group/f7aa49eb4964f33c",
            "arn_suffix": "targetgroup/tg-group/f7aa49eb4964f33c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/tg-group/f7aa49eb4964f33c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ec1df01c045c12b",
            "id": "r-rtb-0b0cb34b60a6af0f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0cb34b60a6af0f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.i-gateway",
            "aws_route_table.pub-table",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:route-table/rtb-0b0cb34b60a6af0f1",
            "id": "rtb-0b0cb34b60a6af0f1",
            "owner_id": "115717770171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ec1df01c045c12b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0e212822ad6ad3f",
            "route_table_id": "rtb-0b0cb34b60a6af0f1",
            "subnet_id": "subnet-08d997eea2486d7af"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea7eef3c87225882",
            "route_table_id": "rtb-0b0cb34b60a6af0f1",
            "subnet_id": "subnet-013c3f9fbf929b191"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:security-group/sg-0406fd1abd9ddf389",
            "description": "Port 5000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0406fd1abd9ddf389",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "golang-server",
            "name_prefix": "",
            "owner_id": "115717770171",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:security-group/sg-09e99a5768d7c5361",
            "description": "Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e99a5768d7c5361",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "golang-server-alb",
            "name_prefix": "",
            "owner_id": "115717770171",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:subnet/subnet-08d997eea2486d7af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "145.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d997eea2486d7af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "115717770171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:subnet/subnet-013c3f9fbf929b191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "145.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013c3f9fbf929b191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "115717770171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-07ab0c5334a394987"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:vpc/vpc-07ab0c5334a394987",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "145.0.0.0/16",
            "default_network_acl_id": "acl-0cdd7f4b8511404b7",
            "default_route_table_id": "rtb-079f220add52abedf",
            "default_security_group_id": "sg-010b6a73d9f423cdb",
            "dhcp_options_id": "dopt-041b4742d6992d835",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ab0c5334a394987",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079f220add52abedf",
            "owner_id": "115717770171",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}